Bug 539749 - [test] rewrite tests that use a JDK module removed in 11
- one out of three tests
- includes minimal fix for JME due to using a JrtPFR from a closed Prj

Change-Id: I73e6a4980d9990eccd3762b037657bf101b93d83